--- a/src/app/App.css
+++ b/src/app/App.css
@@ -11,23 +11,24 @@
     float: left;
 }
 
-/* END Navbar*/
 
 /* Clieckeable elements */
-
 .clickable
 {
     cursor: pointer;
 }
 
-.clickable .glyphicon
-{
-    background: rgba(0, 0, 0, 0.15);
-    display: inline-block;
-    padding: 6px 12px;
-    border-radius: 4px
+a:not([href]):not([tabindex]).post-action{
+    color: grey;
 }
-/* END Clieckeable elements */
+
+a:not([href]):not([tabindex]).post-action:hover{
+    color: red;
+}
+
+a:not([href]):not([tabindex]).post-action .is-active{
+    color: blue;
+}
 
 /* Fixes */
 img.avatar-navbar {
