--- a/src/app/App.css
+++ b/src/app/App.css
@@ -76,6 +76,37 @@ a:not([href]):not([tabindex]).post-action.is-active{
     text-decoration: underline;
 }
 
+/* image overlay */
+.img-container{
+    position:relative;
+    display:inline-block;
+    border-radius: 50%!important;
+}
+.img-container img{
+  display:block
+}
+.img-container .overlay{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    border-radius: 50%!important;
+    background:rgb(0,170,170);
+    opacity:0;
+    transition:opacity 250ms ease-in-out;
+}
+.img-container:hover .overlay{
+    opacity:1;
+}
+.overlay span{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    color:#fff;
+}
+
 /* Fixes */
 img.avatar-navbar {
     background-color: azure;
@@ -135,3 +166,9 @@ img.avatar-navbar {
     background: radial-gradient(rgba(233, 231, 231, 0.8), rgba(204, 197, 197, 0.8));
     background: -webkit-radial-gradient(rgba(233, 231, 231, 0.8), rgba(204, 197, 197, 0.8));
   }
+
+  /*
+  [class*="-info"]{
+      background-color: aqua!important;
+  }
+  */
