--- a/src/app/App.css
+++ b/src/app/App.css
@@ -167,8 +167,13 @@ img.avatar-navbar {
     background: -webkit-radial-gradient(rgba(233, 231, 231, 0.8), rgba(204, 197, 197, 0.8));
   }
 
+  /* theme */
+  body {
+    background-color: rgb(252, 252, 252);
+  }
   /*
   [class*="-info"]{
-      background-color: aqua!important;
+      background-color: rgb(6, 41, 54)!important;
+      border-color: rgb(255, 140, 74)!important;
   }
   */
